samples/_failures_safe/1761171345_98fb4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d507f522.c: In function ‘main’:
./samples/SAFE/__tmp_d507f522.c:138:9: error: expected expression at end of input
  138 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_d507f522.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d507f522.c:138:9: error: expected declaration or statement at end of input
